# indy-cat-or

./: .gitignore  CLAUDE.md  PHASE3_HANDOFF.md  README.md  project_handoff.md  pyproject.toml
.streamlit/: config.toml
data/: README.md
data/embeddings/: README.md
docs/: calibration_design.md  dinov3_setup.md  embeddings_provenance.md
experiments/: README.md  review_mapping.py
images/indy/: LICENSE  mapping.csv
scripts/: README.md  _common.py  build_catbreeds_negatives.py  build_indy_gallery.py  build_oxford_negatives.py  calibrate.py  calibration_report.py  detect_indy_gallery.py  evaluate.py  evaluate_catbreeds.py  split_manifest.py
scripts/calibration/: __init__.py  artifact.py  cache_variant.py  cli.py  evaluate.py  evaluate_catbreeds.py  evaluate_catbreeds_report.py  evaluate_catbreeds_report_html.py  evaluate_report_html.py  evaluate_report_text.py  manifest.py  metrics.py  report_common.py  report_html.py  report_text.py  scoring.py
scripts/data_review/: common.py  crops.py  data_review.py  mapping.py  misses.py
scripts/predict_app/: __init__.py  app.py  predict.py
src/indycat/: __init__.py  decision.py  detection.py  embedding.py
tests/: test_artifact.py  test_build_catbreeds.py  test_calibrate.py  test_calibration_report.py  test_decision.py  test_detection.py  test_embed_stream.py  test_embedding.py  test_embeddings_variant.py  test_evaluate.py  test_evaluate_catbreeds.py  test_evaluate_catbreeds_report_html.py  test_predict.py  test_split_manifest.py
