[project]
name = "indycat"
version = "0.1.0"
description = "Binary verifier: is the specific cat Indy in this image, or not."
readme = "README.md"
authors = [
    { name = "Otto Hylli", email = "otto.hylli@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "streamlit>=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
    "ruff>=0.15.16",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "scripts", "experiments", "tests"]

[tool.ruff.lint]
# A clean, readable baseline: the defaults (E/F) plus import sorting,
# modern-syntax upgrades, common bug catches, and simplifications.
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Experiments are throwaway scratch space — don't nag about unused imports etc.
"experiments/**" = ["F401", "F841"]

[tool.mypy]
python_version = "3.12"
# Add "scripts" here once it contains .py files (mypy errors on empty dirs).
files = ["src", "tests"]
# Pragmatic strictness: require typed function signatures and surface the
# usually-real warnings, without full --strict noise on a young codebase.
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true

# When heavy ML deps land without complete type stubs (torch, ultralytics,
# transformers, cv2, PIL, …), silence their "missing import" noise by adding:
#
#   [[tool.mypy.overrides]]
#   module = ["torch.*", "ultralytics.*", ...]
#   ignore_missing_imports = true
