[project]
name = "indycat"
version = "0.1.0"
description = "Binary verifier: is the specific cat Indy in this image, or not."
readme = "README.md"
authors = [
    { name = "Otto Hylli", email = "otto.hylli@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.2",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "streamlit>=1.58.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.68.2",
    "transformers>=5.12.1",
    "ultralytics>=8.4.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# On Windows the default PyPI torch wheel is CPU-only; pull torch/torchvision
# from PyTorch's CUDA 12.8 index instead (RTX 3070 / driver 580.88 supports it).
# The CUDA index has no macOS wheels, so the override is scoped to Windows: on
# macOS (Apple Silicon) uv falls back to the default PyPI wheel, which ships the
# MPS/Metal backend.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'win32'" }]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "types-pyyaml>=6.0.12.20260518",
    "types-tqdm>=4.68.0.20260608",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "scripts", "experiments", "tests"]

[tool.ruff.lint]
# A clean, readable baseline: the defaults (E/F) plus import sorting,
# modern-syntax upgrades, common bug catches, and simplifications.
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Experiments are throwaway scratch space — don't nag about unused imports etc.
"experiments/**" = ["F401", "F841"]

[tool.pytest.ini_options]
# scripts/ is not an installed package; put it on sys.path so tests can import
# driver modules (e.g. split_manifest) the same way the scripts import _common.
pythonpath = ["scripts"]
markers = [
    "slow: needs model weights and real photos; deselect with -m 'not slow'",
]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests", "scripts"]
# Pragmatic strictness: require typed function signatures and surface the
# usually-real warnings, without full --strict noise on a young codebase.
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true

# Heavy ML deps without complete type stubs.
[[tool.mypy.overrides]]
module = ["ultralytics.*", "torchvision.*", "kagglehub.*"]
ignore_missing_imports = true
